--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -231,11 +231,8 @@ a candidate distribution $q$:
 \end{align}
 %
 where $q$ is an external deterministic fertility model (and, therefore,
-$\mathcal{H}$ is a constant), and the expectation is also deterministic.
-% \JH{ there is a single sample with probability of 1, so you just minimize the
-% inside of the big bracket and ignore the rest.}
-%
-The fertility model depends on an external module which is not trained together
+$\mathcal{H}$ is a constant), and the expectation is also deterministic.  The
+fertility model depends on an external module which is not trained together
 with the model. The authors fine-tune the trained translation model using
 reinforcement learning \citep{williams1992simple} to estimate the gradients of
 the fertility model.
@@ -247,9 +244,6 @@ decoding, the fertility with the highest probability is chosen in each step,
 similarly to greedy decoding. The average method chooses the expected fertility
 given the distribution in each position. \ac{npd} is based on sampling and
 rescoring with an \acl{ar} model, as explained below.
-
-% \JH{Explain
-%   the three methods, diff to LPD} \JH{There is another comment in the PDF.}
 
 % ------------------------------------------------------------------------------
 \paragraph{Autoregressive Rescoring.} A usual technique in the \ac{nat}
@@ -420,7 +414,6 @@ cross entropy is the one that aligns the positions 3--5 from the label sequence
 in the output. Either of the first two positions in the label sequence can be
 aligned to the first position in the output sequence, while the other label
 position remains unaligned.
-%\JH{obrazek?}
 
 The alignments considered in the \ac{axe} approach are monotonic (i.e.,
 $a(i) \leq a(j)$ for every $i \leq j$, when defined), but the mapping does not
@@ -553,7 +546,7 @@ to guide the alignment learning in the student model. Again, this information
 is incorporated into the training as an auxiliary loss, based on the KL
 divergence between the teacher and student attention distributions.  Again, the
 auxiliary losses are mixed using weighting hyperparameters together with the
-cross-entropy loss. %\JH{explain the losses}
+cross-entropy loss.
 
 % -----------------------------------------------------------------------------
 \paragraph{\Acl{bon} Difference.} \citet{shao2020minimizing} address the issue
@@ -588,11 +581,6 @@ but instead of a fertility model, the target sequence length prediction is done
 using the output representation of an artificial \texttt{LENGTH} token which is
 added to the decoder input (as in the \ac{cmlm} approach of
 \citealp{ghazvininejad-etal-2019-mask}, see Section \ref{sec:nat:semi}).
-
-% Very recently, a \ac{glat} model appeared among the top-scoring models at the
-% \acs{wmt} News Translation Shared Task \citep{qian2021volctrans}. \JH{update
-%   bib after WMT}
-
 
 % ------------------------------------------------------------------------------
 \section{Iterative and Semi-Autoregressive Methods}%
@@ -706,7 +694,6 @@ prevent information leakage between the same positions on different layers, the
 self-attention keys and values are decontextualized, meaning that instead of
 hidden states from the previous layer, the decoder input embeddings are
 used.
-% \JH{explain more clearly}
 
 % ------------------------------------------------------------------------------
 \paragraph{\Acl{jmnat}.} Following the practice from training the BERT model
@@ -750,7 +737,6 @@ model) and finds the largest $\hat{k}$ such that teh decoded words from models
 $p_i$, $1 \leq i \leq \hat{k}$ are all considered best by $p_1$. Third, the
 accepted $\hat{k}$ words are generated, and the decoding process moves to time
 step $t + \hat{k}$.
-% \JH{explain more clearly?}
 
 % ------------------------------------------------------------------------------
 \paragraph{Insertion Transformer.} The Insertion Transformer
@@ -762,9 +748,6 @@ them. In each step, the insertion operations are generated in parallel and
 independently; we can thus include this approach in the semi-autoregressive
 category. The authors experiment with decoding in a balanced binary tree order,
 which can generate the output sequence in a logarithmic number of steps.
-
-% An extension to the Insertion Transformer is
-% KERMIT. \citep{chan-etal-2019-kermit} \JH{more about kermit}
 
 % ------------------------------------------------------------------------------
 \paragraph{\acl{levt}.} An interesting combination of the ideas introduced in
@@ -792,15 +775,10 @@ generates $y$ given the source sentence $x$ and the hidden sequence $l$.
 The autoencoder is used to condense the longer target sequence $y$ into a
 shorter sequence (usually 8 times) $l$, which serves as an intermediate
 representation of $y$. Unlike perhaps more common autoencoders, this
-autoencoder uses discrete latent variables.
-% The authors propose two methods (decomposed vector quantization and latent
-% semantic hashing) for the discretization.
-A stack of convolutions with residual connections is selected as the
-autoencoder architecture. The latent prediction model is a stack of Transformer
-layers, and the decoder consists of deconvolutions.
-%
-%\JH{explain how inference works, begin with why is this iterative}
-
+autoencoder uses discrete latent variables. A stack of convolutions with
+residual connections is selected as the autoencoder architecture. The latent
+prediction model is a stack of Transformer layers, and the decoder consists of
+deconvolutions.
 
 % ------------------------------------------------------------------------------
 \section{Other Methods}%
@@ -810,20 +788,14 @@ layers, and the decoder consists of deconvolutions.
 In this section, we summarize the related work that does not fall clearly
 within any of the three categories from the above sections.
 
-% \paragraph{LaNMT} \citep{shu2020latent} -- latent-variable NAR NMT with
-% deterministic inference using a delta posterior \JH{to bych nechal na potom
-% nebo vyhodil}
-
 % -----------------------------------------------------------------------------
-\paragraph{\Acl{dcrf}.} %\textbf{CRF decoding on top of vanilla NAT, not really NAT
-% (similar to CTC+beam)}
-In the original \ac{nat} model, the generation of the output sentence is done
-by selecting the tokens with the highest probability at each position. Instead
-of the argmax decoding, \citet{sun2019fast} propose to use \ac{crf}, which
-allows the modeling of causal relations within the output sequence. Although
-this process is not \acl{nar} given the nature of the \ac{crf} decoding, the
-Transformer model needs to be run only once and does not need to take into
-account the tokens as they are being generated.
+\paragraph{\Acl{dcrf}.} In the original \ac{nat} model, the generation of the
+output sentence is done by selecting the tokens with the highest probability at
+each position. Instead of the argmax decoding, \citet{sun2019fast} propose to
+use \ac{crf}, which allows the modeling of causal relations within the output
+sequence. Although this process is not \acl{nar} given the nature of the
+\ac{crf} decoding, the Transformer model needs to be run only once and does not
+need to take into account the tokens as they are being generated.
 
 In Section \ref{sec:ctc:fluency} we present a similar idea based on a
 \ac{ctc}-based model, using rescoring with an n-gram \acl{lm}.
@@ -835,8 +807,7 @@ variable $z$ into the model. The authors argue that the prior distribution
 $p(z|x)$ needs to be complex to model all dependency relations among the target
 tokens. They propose to use generative flow \citep{rezende2015variational} for
 deriving the complex distribution from a simple prior using a series of
-invertible transformations. %\JH{throw out completely?}
-% \JH{megacomplex paper}
+invertible transformations.
 
 % -----------------------------------------------------------------------------
 \paragraph{Iterative knowledge distillation.}
@@ -924,89 +895,88 @@ decoding speed is gained. \JH{There should be a table with the decoding speeds,
   \centering
 
   \begin{adjustbox}{totalheight=\textheight-3\baselineskip}
-  \begin{tabular}{cl>{\ignorecolumn}r@{}cc}
+  \begin{tabular}{clcc}
     \toprule
     \multicolumn{2}{l}{Method}
-    & Steps & En $\rightarrow$ De & De $\rightarrow$ En \\
+    & En $\rightarrow$ De & De $\rightarrow$ En \\
     \midrule
 
-    & \citet{gu2017nonautoregressive} & & & \\
-    & \quad \acs{nat} + FT & 1 & 17.69 & 21.47 \\
-    & \quad \acs{nat} + FT + top-100 \acs{npd} rescoring & 101 & 19.17 & 23.20 \\
+    & \citet{gu2017nonautoregressive} \\
+    & \quad \acs{nat} + FT & 17.69 & 21.47 \\
+    & \quad \acs{nat} + FT + top-100 \acs{npd} rescoring & 19.17 & 23.20 \\
 
-    & \citet{lee-etal-2018-deterministic} & & \\
-    & \quad 1 iteration & 1 & 13.91 & 16.77 \\
-    & \quad 10 iterations & 10 & 21.61 & 25.48 \\
+    & \citet{lee-etal-2018-deterministic} \\
+    & \quad 1 iteration & 13.91 & 16.77 \\
+    & \quad 10 iterations & 21.61 & 25.48 \\
 
     \midrule
     \multirow{6}{*}{\rotatebox{90}{Alignment}}
 
-    & \citet{ghazvininejad2020aligned}, \acs{axe} \acs{cmlm} & 1 & 23.53 & 27.90 \\
+    & \citet{ghazvininejad2020aligned}, \acs{axe} \acs{cmlm} & 23.53 & 27.90 \\
 
-    & \citet{du2021orderagnostic}, \acs{cmlm} + \acs{oaxe}
-           & \JH{1?} & 26.10 & 30.20 \\
+    & \citet{du2021orderagnostic}, \acs{cmlm} + \acs{oaxe} & 26.10 & 30.20 \\
 
-    & \citet{saharia-etal-2020-non} & & & \\
-    & \quad \acs{ctc} & 1 & 25.70 & 28.10 \\
-    %& \quad Imputer  &  1 & 25.80 & 28.40 \\
-    & \quad Imputer & 8 & 28.20 & 31.80 \\
+    & \citet{saharia-etal-2020-non} \\
+    & \quad \acs{ctc} & 25.70 & 28.10 \\
+    %& \quad Imputer  & 25.80 & 28.40 \\
+    & \quad Imputer & 28.20 & 31.80 \\
 
     & \citet{gu-kong-2021-fully}, \acs{nat} + \acs{ctc} + \acs{glat}
-           & 1\JH{?} & 27.20 & 31.39 \\
+                          & 27.20 & 31.39 \\
 
     \midrule
     \multirow{10}{*}{\rotatebox{90}{Auxiliary Objectives}}
 
-    & \citet{wang-etal-2019-nonautoregressive} & & & \\
-    & \quad \acs{natreg}, no rescoring & 1 &  20.65 & 24.77 \\
-    & \quad \acs{natreg}, top-9 rescoring & 10 & 20.65 & 24.77 \\
+    & \citet{wang-etal-2019-nonautoregressive} \\
+    & \quad \acs{natreg}, no rescoring & 20.65 & 24.77 \\
+    & \quad \acs{natreg}, top-9 rescoring & 20.65 & 24.77 \\
 
-    & \citet{li-etal-2019-hint} & & & \\
-    & \quad \acs{hintnat}, no rescoring & 1 & 21.11  & 25.24 \\
-    & \quad \acs{hintnat}, top-9 rescoring & 10 & 25.20  & 29.52 \\
+    & \citet{li-etal-2019-hint} \\
+    & \quad \acs{hintnat}, no rescoring & 21.11  & 25.24 \\
+    & \quad \acs{hintnat}, top-9 rescoring & 25.20  & 29.52 \\
 
-    & \citet{shao2020minimizing}, \acs{bon}-Joint+FT & \JH{1} & 20.90 & 24.61 \\
+    & \citet{shao2020minimizing}, \acs{bon}-Joint+FT & 20.90 & 24.61 \\
 
-    & \citet{qian-etal-2021-glancing} & & & \\
-    & \quad \acs{glat} + \acs{ctc} & 1 & 26.39 & 29.54 \\
-    & \quad \acs{glat} + \acs{ctc} + top-7 \acs{npd} rescoring & \JH{discuss} & 26.55 & 31.02 \\
+    & \citet{qian-etal-2021-glancing} \\
+    & \quad \acs{glat} + \acs{ctc} & 26.39 & 29.54 \\
+    & \quad \acs{glat} + \acs{ctc} + top-7 \acs{npd} rescoring & 26.55 & 31.02 \\
 
     \midrule
     \multirow{10}{*}{\rotatebox{90}{Iterative}}
 
-    & \citet{ghazvininejad-etal-2019-mask} & & \\
-    & \quad \acs{cmlm} + Mask-Predict, 1 iteration & 1 & 18.05 & 21.83 \\
-    & \quad \acs{cmlm} + Mask-Predict, 10 iterations & 10 & 27.03 & 30.53 \\
+    & \citet{ghazvininejad-etal-2019-mask} \\
+    & \quad \acs{cmlm} + Mask-Predict, 1 iteration & 18.05 & 21.83 \\
+    & \quad \acs{cmlm} + Mask-Predict, 10 iterations & 27.03 & 30.53 \\
 
     & \citet{kasai2020nonautoregressive}, \acs{disco} + Easy-First
-           & \JH{??} & 27.34 & 31.31 \\
+                          & 27.34 & 31.31 \\
 
-    & \citet{guo-etal-2020-jointly} & & & \\
-    & \quad \acs{jmnat}, 4 iterations & 4 & 27.05 & 31.51 \\
-    & \quad \acs{jmnat}, 10 iterations & 10 & 27.69 & 32.24 \\
+    & \citet{guo-etal-2020-jointly} \\
+    & \quad \acs{jmnat}, 4 iterations & 27.05 & 31.51 \\
+    & \quad \acs{jmnat}, 10 iterations & 27.69 & 32.24 \\
 
-    & \citet{kaiser2018fast} & & \\
-    & \quad \acs{lt}, no rescoring & 1 & 19.80 & -- \\
-    & \quad \acs{lt}, top-100 rescoring & 101 & 22.50 & -- \\
+    & \citet{kaiser2018fast} \\
+    & \quad \acs{lt}, no rescoring & 19.80 & -- \\
+    & \quad \acs{lt}, top-100 rescoring & 22.50 & -- \\
 
     \midrule
     \multirow{11}{*}{\rotatebox{90}{Other}}
 
-    & \citet{sun2019fast} & & & \\
-    & \quad \acs{nat} + \acs{dcrf}, no rescoring & 1 & 23.44 & 27.22 \\
-    & \quad \acs{nat} + \acs{dcrf}, top-19 rescoring & 20 & 26.80 & 30.04 \\
+    & \citet{sun2019fast} \\
+    & \quad \acs{nat} + \acs{dcrf}, no rescoring & 23.44 & 27.22 \\
+    & \quad \acs{nat} + \acs{dcrf}, top-19 rescoring & 26.80 & 30.04 \\
 
-    & \citet{ma-etal-2019-flowseq} & & & \\
-    & \quad FlowSeq-large & 1 & 23.72 & 28.39 \\
-    & \quad FlowSeq-large + top-30 \acs{npd} rescoring & 31 & 25.31 & 30.68 \\
+    & \citet{ma-etal-2019-flowseq} \\
+    & \quad FlowSeq-large & 23.72 & 28.39 \\
+    & \quad FlowSeq-large + top-30 \acs{npd} rescoring & 25.31 & 30.68 \\
 
-    & \citet{sun2020em}, \acs{emodd} & \JH{??} & 24.54 & 27.93 \\
+    & \citet{sun2020em}, \acs{emodd} & 24.54 & 27.93 \\
 
-    & \citet{ran-etal-2021-guiding} & & &  \\
-    & \quad \acs{ar} reordering & N & 26.49 & 31.13  \\
-    & \quad \acs{nar} reordering & 1\footnotemark\JH{..} & 22.79 & 27.28 \\
+    & \citet{ran-etal-2021-guiding} \\
+    & \quad \acs{ar} reordering & 26.49 & 31.13  \\
+    & \quad \acs{nar} reordering  & 22.79 & 27.28 \\
 
-    & \citet{huang-etal-2021-nonautoregressive}, CTC + DSLP &\JH{?} & 27.02  &  31.61 \\
+    & \citet{huang-etal-2021-nonautoregressive}, CTC + DSLP & 27.02  &  31.61 \\
     \bottomrule
   \end{tabular}
   \end{adjustbox}
@@ -1059,16 +1029,6 @@ and no optimizations. Additionally, most articles cite a baseline \ac{ar}
 latency of 607 ms \JH{konkretne kdo}, which is the result of
 \citet{gu2017nonautoregressive} with beam search, even though beam search is
 not used in the presented \ac{nar} models for the most part.
-
-% \JH{this is regarding the baseline decoding speeds
-%   reported by NAT literature. This paragraph should look into WNGT 20 or 21 and
-%   check the speeds of best AR results and compare to the autoregressive speeds
-%   reported in the NAT literature. What do we find is, that the AR baselines in
-%   NAT models are actually much slower. Often, which is another issue, the
-%   decoding speeds are not reported at all.  }
-
-% \JH{dalsi vec je ze setup GPU batch 1 hodne zvyhodnuje neautoregresivni modely}
-
 
 % -----------------------------------------------------------------------------
 \paragraph{Evaluation Methodology.} Another aspect we need to address is the
@@ -1129,7 +1089,7 @@ which is faster.
 However, it is challenging to find a way to compare the contributions of
 different research groups objectively. One such effort is made by the
 organizers of the Efficiency Shared Task, now organized yearly at the \acl{wmt}
-(\acs{wmt}\glsunset{wmt}, \citealp{heafield-etal-2020-findings,
+(\acs{wmt}\glsunset{wmt}; \citealp{heafield-etal-2020-findings,
   heafield-etal-2021-findings}).\JH{update bib when ready, separate WMT from
   cite}
 
@@ -1142,18 +1102,6 @@ different scenarios: GPU latency (decoding without batching) and throughput
 (decoding with the optimal batch size), latency and throughput on a single CPU,
 and throughput on a multi-core CPU. \JH{shrnout poznatky ze shared tasku}
 
-% \JH{This paragraph will discuss the
-%   evalutaion in general. Reporting relative speed-up OK, but citing
-%   autoregressive latency by others and then measure speed up relative to that
-%   is not OK, as well as citing and comparing to relative speed-ups of others.
-%   Most papers report GPU latency, but it is not a rule. The speed should be
-%   reported under multiple settings, best would be to report it as they do in
-%   WNGT, i.e. latency and throughput (batching and no-batching), and both on CPU
-%   and on GPU. Also, they should always say how many cores they used.}
-
-% \JH{We could also have a table with autoregressive baselines reported by each
-%   study, and get some details on that.}
-
 Our final observation is that measuring latency on a single GPU without
 batching is a setup that favors \ac{nar} models, even though other scenarios
 should also be considered for real-world applications. In batched GPU decoding,
@@ -1163,24 +1111,6 @@ batch-parallelization of \ac{ar} models makes up for time-parallelization of
 only limited parallelization is possible, so the advantage of \ac{nar} models
 is also diminished. \JH{observation je na zaklade vysledku, odkaz na kapitolu}
 
-
-
-%\JH{perhaps add something about time complexity and how it is not constant?}
-
-% \begin{table}
-%   \centering
-
-%   \begin{tabular}{lll}
-%     \toprule
-%     Method & Steps & \acs{bleu} \\
-%     \midrule
-
-%     \bottomrule
-%   \end{tabular}
-
-%   \caption{An overview of the \ac{nat} models in the literature.}%
-%   \label{tab:related-models}
-% \end{table}
 
 %%% Local Variables:
 %%% mode: latex
